# Chess-project-in-Cpp

./: .gitignore  CMakeLists.txt  CMakeLists.txt.save  Chess Logic in progress  ChessLogicFinal.cpp  README.md  console_app  konsolka_bin  main.cpp
assets/sounds/: sound_player.cpp  sound_player.hpp
recent_games/: 20260122_141208_white_win_checkmate.txt  20260122_141312_white_win_checkmate.txt  20260122_141505_white_win_checkmate.txt  20260122_155816_black_timeout_timeout.txt  20260122_171128_white_win_checkmate.txt  20260122_213941_stalemate_stalemate.txt  20260122_223742_white_timeout_timeout.txt  20260123_000545_black_timeout_timeout.txt  20260123_111810_white_timeout_timeout.txt  20260123_113406_white_timeout_timeout.txt  20260123_175543_white_timeout_timeout.txt  20260123_221051_white_timeout_timeout.txt  index.html
scripts/: index.html  search_games.sh
src/: Board.cpp  Board.hpp  GameLogic.cpp  GameLogic.hpp  GameRecorder.cpp  GameRecorder.hpp  PieceManager.cpp  PieceManager.hpp  SoundManager.cpp  SoundManager.hpp  bot.cpp  bot.hpp  main.cpp
src/Pieces/: Bishop.cpp  Bishop.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Pawn.cpp  Pawn.hpp  Piece.hpp  Queen.cpp  Queen.hpp  Rook.cpp  Rook.hpp
